fix: /places 응답 count 추가